<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (c) 2014 Emil Suleymanov <suleymanovemil8@gmail.com>

     This program is free software; you can redistribute it and/or
     modify it under the terms of the GNU General Public License
     as published by the Free Software Foundation; either version 2
     of the License, or (at your option) any later version.

     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.

     You should have received a copy of the GNU General Public License
     along with this program; if not, write to the Free Software
     Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
     MA  02110-1301, USA.
-->
<resources>

    <string name="zero_dgr" translatable="false">0.0°</string>
    <string name="arrow" translatable="false">➤</string>
    <string name="app_name">Compass</string>
    <string name="pos_ans">OK</string>
    <string name="about">About</string>
    <string name="license1">Copyright © 2014 Emil Suleymanov</string>
    <string name="license2">Distributed under the GNU GPL v3.</string>
    <string name="license3">Source code is available at https://github.com/sssemil/Compass .</string>
    <string name="S">S</string>
    <string name="W">W</string>
    <string name="E">E</string>
    <string name="N">N</string>
    <string name="title_activity_sensor">Sensor</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="point_to">Point to</string>
    <string name="def">Default</string>
    <string name="custom">Custom degree…</string>
    <string name="pined">Pin on map…</string>
    <string name="ent_cus_dgr">Enter custom degree</string>
    <string name="offset_text">Offset:</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_text">Thanks for installing my app!\nNote that arrow is long clickable :)</string>
    <string name="settings">Settings</string>
    <string name="other">Other</string>
    <string name="dip_angle">Dip angle</string>
    <string name="custom_arrow_direction">Custom arrow direction</string>
    <string name="general">General</string>
    <string name="pref_title_build_version">Build version</string>
    <string name="gps_is_disabled_enable">GPS is disabled in your device. Would you like to enable it?</string>
    <string name="go_set_gps">Go to Settings Page To Enable GPS</string>
    <string name="gps_dis_warn">●GPS is disabled, using last known location!</string>
    <string name="true_n">True north</string>
    <string name="true_n_summary">Show to true north instead of magnetic north</string>
</resources>
